--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,7 +13,7 @@ server {
         try_files $uri =404;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /var/www$document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME /var/www/public$fastcgi_script_name;
         include fastcgi_params;
     }
 
