--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
             POSTGRES_DB: ${DB_DATABASE}
         volumes:
             - db_data:/var/lib/postgresql/data
+        ports:
+            - "5432:5432"
 
     nginx:
         image: nginx:alpine
